--- a/index.html
+++ b/index.html
@@ -8,9 +8,29 @@
 </head>
 <body>
     <header>
-        <div>
+        <div class="centratura">
             <h1>Meet Our Team</h1>
         </div>
     </header>
+
+    <main>
+        <div class="centratura">
+            <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni illum nihil, animi expedita deleniti, obcaecati numquam quam cupiditate minima officiis quo ullam maiores? Iusto, iure enim? Iste quam cumque voluptatem.
+            </p>
+            <div id="cardsContainer">
+                <div class="riga">
+                    <div class="cards"></div>
+                    <div class="cards centrale"></div>
+                    <div class="cards"></div>
+                </div>
+                <div id="riga2" class="riga">
+                    <div class="cards"></div>
+                    <div class="cards centrale"></div>
+                    <div class="cards"></div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
