Main (Cards), Commenti

--- a/index.html
+++ b/index.html
@@ -5,29 +5,79 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inclusive+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Header -->
     <header>
         <div class="centratura">
             <h1>Meet Our Team</h1>
         </div>
     </header>
-
+    <!-- Main -->
     <main>
         <div class="centratura">
+            <!-- Paragrafo -->
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni illum nihil, animi expedita deleniti, obcaecati numquam quam cupiditate minima officiis quo ullam maiores? Iusto, iure enim? Iste quam cumque voluptatem.
             </p>
+            <!-- Contenitore Cards -->
             <div id="cardsContainer">
+                <!-- Prima riga -->
                 <div class="riga">
-                    <div class="cards"></div>
-                    <div class="cards centrale"></div>
-                    <div class="cards"></div>
+                    <div class="cards">
+                        <img class="imgCards" src="img/male1.png" alt="Male 1">
+                        <div class="infoCardsContainer">
+                            <h5 class="white">MARCO BIANCHI</h5>
+                            <div class="white">Designer</div>
+                            <div class="azzurro">marcobianchi@team.com</div>
+                        </div>
+                    </div>
+                    <div class="cards centrale">
+                        <img class="imgCards" src="img/female1.png" alt="Female 1">
+                        <div class="infoCardsContainer">
+                            <h5 class="white">LAURA ROSSI</h5>
+                            <div class="white">Front-end Developer</div>
+                            <div class="azzurro">laurarossi@team.com</div>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <img class="imgCards" src="img/male2.png" alt="Male 2">
+                        <div class="infoCardsContainer">
+                            <h5 class="white">GIORGIO VERDI</h5>
+                            <div class="white">Back-end Developer</div>
+                            <div class="azzurro">giorgioverdi@team.com</div>
+                        </div>
+                    </div>
                 </div>
+                <!-- Seconda riga -->
                 <div id="riga2" class="riga">
-                    <div class="cards"></div>
-                    <div class="cards centrale"></div>
-                    <div class="cards"></div>
+                    <div class="cards">
+                        <img class="imgCards" src="img/female2.png" alt="Female 1">
+                        <div class="infoCardsContainer">
+                            <h5 class="white">MARTA IPSUM</h5>
+                            <div class="white">Seo Specialist</div>
+                            <div class="azzurro">martaipsum@team.com</div>
+                        </div>
+                    </div>
+                    <div class="cards centrale">
+                        <img class="imgCards" src="img/male3.png" alt="Male 3">
+                        <div class="infoCardsContainer">
+                            <h5 class="white">ROBERTO LOREM</h5>
+                            <div class="white">Project Manager</div>
+                            <div class="azzurro">robertolorem@team.com</div>
+                        </div>
+                    </div>
+                    <div class="cards">
+                        <img class="imgCards" src="img/female3.png" alt="Female 1">
+                        <div class="infoCardsContainer">
+                            <h5 class="white">DANIELA AMET</h5>
+                            <div class="white">Analyst</div>
+                            <div class="azzurro">danielaamet@team.com</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
